Game board now properly updates array

--- a/src/input.css
+++ b/src/input.css
@@ -31,6 +31,10 @@ nav {
   font-size: 3.2rem;
 }
 
+.square:hover {
+  background-color: whitesmoke;
+}
+
 #ptext {
   font-family: sans-serif;
   text-align: center;
