--- a/src/input.css
+++ b/src/input.css
@@ -17,6 +17,12 @@ nav {
   align-items: center;
 }
 
+#gameArea {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px;
+}
+
 @media only screen and (min-width: 300px) {
   #gameArea {
     display: grid;
