--- a/src/input.css
+++ b/src/input.css
@@ -17,13 +17,7 @@ nav {
   align-items: center;
 }
 
-#gameArea {
-  display: grid;
-  grid-template-columns: 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px;
-}
-
-@media only screen and (min-width: 300px) {
+@media only screen and (max-width: 699px) {
   #gameArea {
     display: grid;
     grid-template-columns: 100px 100px 100px;
